<resources>
    <string name="app_name">Two-Player Farkle</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>

    <string name="one">1</string>
    <string name="five">5</string>
    <string name="triple_ones">Three 1\'s</string>
    <string name="triple_twos">Three 2\'s</string>
    <string name="triple_threes">Three 3\'s</string>
    <string name="triple_fours">Three 4\'s</string>
    <string name="triple_fives">Three 5\'s</string>
    <string name="triple_sixes">Three 6\'s</string>
    <string name="straight">1-2-3-4-5-6</string>
    <string name="triple_pairs">3 Pairs</string>

    <string name="reset">Reset</string>

    <!--Donation page-->
    <string name="action_donate">Donate to Developer</string>
    <string name="donate_title">Donate</string>
    <string name="donate_greeting">Hello!</string>
    <string name="donate_message">My name is Amanda. If you are enjoying this app I developed,
        please consider purchasing my donation app.\n\nThe donation app does not do anything,
        but your donation will show me that my time spent developing free, no-ads apps is appreciated. Thanks!</string>
    <string name="play_store_direct_link" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_browser_link" translatable="false">http://bit.ly/donate_rng</string>
    <string name="button_donate">Get it on Google Play</string>

</resources>
